# remote_colonies

./: .gitignore  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
godot2d/: HUD.gdns  HUD.tscn  Main.gdns  Main.tscn  Planet.gdns  Planet.tscn  Ship.gdns  Ship.tscn  export_presets.cfg  project.godot  remote_colonies_library.gdnlib  remote_colonies_library_debug.gdnlib
godot2d/art/: pirulen.tres
src/: lib.rs
src/local/: input.rs  mod.rs  planet.rs  starmap.rs
src/local/ai/: evaluator.rs  mcst.rs  mod.rs
src/local/ai/mcts/: README.md  atomics.rs  mod.rs  search_tree.rs  transposition_table.rs  tree_policy.rs
src/local/model/: mod.rs
src/local/player/: mod.rs
src/local/starmap/: builder.rs  mod.rs
src/renderer/: mod.rs
src/renderer/godot2d/: game.rs  hud.rs  input.rs  mod.rs  planet.rs  player.rs  ship.rs  starmap.rs
